<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark">

    <LinearLayout
        android:id="@+id/overallLinearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Top bar -->

        <LinearLayout
            android:background="@color/backgroundDarkAppHeader"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <Button
                android:id="@+id/settingsBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leftArrow"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:minHeight="0dp"
                android:minWidth="0dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:text="@string/settingsTitle"
                android:textSize="20sp"
                android:textColor="@color/textDark"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/resetSettingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetbutton"
                android:minHeight="0dp"
                android:minWidth="0dp"/>

            <Button
                android:id="@+id/saveSettingsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:minHeight="0dp"
                android:minWidth="0dp"/>

        </LinearLayout>


    </LinearLayout>
</ScrollView>