<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@color/backgroundDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/todoSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_section"
                android:textSize="20sp"
                android:textColor="@color/textDark"

                android:gravity="center_vertical"
                />

            <Spinner
                android:id="@+id/todoSectionInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textDark"
                android:textColorHint="@color/textDark"

                android:gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/todoPositionLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/todoPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_position"
                android:textSize="20sp"
                android:textColor="@color/textDark"

                android:gravity="center_vertical"
                />

            <Spinner
                android:id="@+id/todoPositionInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textDark"
                android:textColorHint="@color/textDark"

                android:gravity="center_vertical"
                />
        </LinearLayout>

        <!-- Had to use constraint layout because of what I think is a bug -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/notificationNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/todo_title"
                android:textSize="20sp"
                android:textColor="@color/textDark"
                android:gravity="center_vertical"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <EditText
                android:id="@+id/todoNameInput"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:hint="@string/todo_title_input_text"
                android:textColor="@color/textDark"
                android:textColorHint="@color/textDark"
                android:inputType="text|textMultiLine"
                android:layout_weight="1"

                app:layout_constraintLeft_toRightOf="@+id/notificationNameTitle"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <TextView
                android:id="@+id/notificationNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_title"
                android:textSize="20sp"
                android:textColor="@color/textDark"
                />

            <EditText
                android:id="@+id/todoNameInput"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:hint="@string/todo_title_input_text"
                android:textColor="@color/textDark"
                android:textColorHint="@color/textDark"
                android:inputType="text|textMultiLine"

                android:layout_weight="1"
                android:gravity="fill_vertical"
                />
        </LinearLayout>-->

        <!-- To do extra information may be added in future,
        But I think it's un-needed

        <LinearLayout
            android:id="@+id/extraInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/notificationTitleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="To do Extra Info: "
                android:textSize="20dp"
                android:textColor="@color/textDark"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:gravity="center_vertical"
                />

            <EditText
                android:id="@+id/notificationTitleInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="To do Extra Info"
                android:textColor="@color/textDark"
                android:textColorHint="@color/textDark"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:gravity="center_vertical"
                />
        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <Button
                android:id="@+id/deleteTodoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/delete"
                android:layout_marginLeft="50dp"
                />

            <Button
                android:id="@+id/editTodoSubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/submit"
                android:layout_marginLeft="25dp"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>